# repo-scaffold

./: .env  .gitignore  .ruff.toml  404.html  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  cog.toml  cookiecutter.json  hello.py  index.html  justfile  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/: renovate.json5
.github/workflows/: build.yaml  bump_version.yaml  bumpversion.yaml  ci-tests.yaml  deploy_docs.yaml  docs-deploy.yaml  lint.yaml  package-release.yaml  release-build.yaml  release_build.yaml  setup.yaml  version-bump.yaml
docs/templates/: ci-cd.md  gh-init.md  index.md  python.md  uv-workspace.md
reference/SUMMARY/: index.html
reference/repo_scaffold/: index.html
reference/repo_scaffold/add_package/: index.html
reference/repo_scaffold/add_package/config/: index.html
reference/repo_scaffold/add_package/workspace/: index.html
reference/repo_scaffold/cli/: index.html
reference/repo_scaffold/github_init/: index.html
reference/repo_scaffold/github_init/client/: index.html
reference/repo_scaffold/github_init/config/: index.html
repo_scaffold/: __init__.py  cli.py  github_init.py  utils.py
repo_scaffold/add_package/: __init__.py  config.py  workspace.py
repo_scaffold/components/airflow_docker/: component.yaml
repo_scaffold/components/github_actions/: component.yaml
repo_scaffold/components/mkdocs/: component.yaml
repo_scaffold/components/podman/: component.yaml
repo_scaffold/components/pre_commit/: component.yaml
repo_scaffold/components/private_pypi/: component.yaml
repo_scaffold/components/task_automation/: component.yaml
repo_scaffold/components/task_automation/files/: Taskfile.yml.j2
repo_scaffold/core/: __init__.py  component_manager.py  cookiecutter_runner.py  template_composer.py
repo_scaffold/github_init/: __init__.py  client.py  config.py
repo_scaffold/templates/: cookiecutter.json  python-library.yaml
repo_scaffold/templates/template-pnpm-workspace/: cookiecutter.json
repo_scaffold/templates/template-pnpm-workspace/hooks/: post_gen_project.py
repo_scaffold/templates/template-pnpm-workspace/{{cookiecutter.project_slug}}/: README.md  cog.toml  justfile  package.json
repo_scaffold/templates/template-python/: cookiecutter.json
repo_scaffold/templates/template-python/hooks/: post_gen_project.py
repo_scaffold/templates/template-python/{{cookiecutter.project_slug}}/: cog.toml  justfile  mkdocs.yml  noxfile.py  pyproject.toml
repo_scaffold/templates/template-python/{{cookiecutter.project_slug}}/.github/: renovate.json5
repo_scaffold/templates/template-python/{{cookiecutter.project_slug}}/.github/workflows/: bump_version.yaml  ci-tests.yaml  container-release.yaml  deploy_docs.yaml  docs-deploy.yaml  lint.yaml  package-release.yaml  release_build.yaml  setup.yaml  version-bump.yaml
repo_scaffold/templates/template-react/: cookiecutter.json
repo_scaffold/templates/template-react/hooks/: post_gen_project.py
repo_scaffold/templates/template-react/{{cookiecutter.project_slug}}/: .cta.json  .dockerignore  README.md  cog.toml  justfile  package.json  vite.config.ts
repo_scaffold/templates/template-rust/: cookiecutter.json
repo_scaffold/templates/template-rust/hooks/: post_gen_project.py
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/: .dockerignore  .env.test  .gitignore  Cargo.toml  LICENSE  README.md  cog.toml  justfile
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/.github/: renovate.json5
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  container-release.yaml  package-release.yaml  version-bump.yaml
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/container/: Dockerfile  compose.yaml
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/db-seed/: 01-tables.sql  02-seed.sql
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/scripts/: add_package.py
repo_scaffold/templates/template-rust/{{cookiecutter.project_slug}}/tests/: test_health_routes.rs
repo_scaffold/templates/template-ts-sdk/: cookiecutter.json
repo_scaffold/templates/template-ts-sdk/hooks/: post_gen_project.py
repo_scaffold/templates/template-ts-sdk/{{cookiecutter.project_slug}}/: .env.example  README.md  package.json  tsconfig.json  vite.config.ts
repo_scaffold/templates/template-uv-workspace/: cookiecutter.json
repo_scaffold/templates/template-uv-workspace/{{cookiecutter.project_slug}}/: .ruff.toml  README.md  cog.toml  justfile  mkdocs.yml  pyproject.toml
repo_scaffold/templates/template-uv-workspace/{{cookiecutter.project_slug}}/.github/: renovate.json5
repo_scaffold/templates/template-uv-workspace/{{cookiecutter.project_slug}}/.github/workflows/: ci-tests.yaml  docs-deploy.yaml  package-release.yaml  version-bump.yaml
repo_scaffold/templates/template-uv-workspace/{{cookiecutter.project_slug}}/scripts/: add_package.py
repo_scaffold/templates/template-vue-project/: cookiecutter.json
repo_template/: cli.py
search/: search_index.json
template-python/: cookiecutter.json
template-python/hooks/: post_gen_project.py
template-python/{{cookiecutter.project_slug}}/: noxfile.py  pyproject.toml
template-python/{{cookiecutter.project_slug}}/.github/workflows/: bump_version.yaml  bumpversion.yaml  lint.yaml  release_build.yaml
templates/: index.html
templates/ci-cd/: index.html
templates/gh-init/: index.html
templates/python/: index.html
templates/uv-workspace/: index.html
tests/: conftest.py  test_add_package.py  test_cli.py  test_component_manager.py  test_cookiecutter_runner.py  test_fixtures.py  test_github_init.py  test_integration.py  test_template_composer.py  test_templates.py
tests/components/: test_github_actions.py  test_podman.py  test_pre_commit.py  test_pypi.py
tests/fixtures/components/: python_core.yaml
tests/fixtures/templates/: python-cli.yaml  python-library.yaml
tests/integration/: test_template_integration.py
tests/templates/: test_python_library.py
(+81 files in other folders)
