[project]
name = "repo-scaffold"
version = "0.20.0"
description = "A modern project scaffolding tool that helps you quickly create standardized project structures with best practices."
authors = [
    {name = "shawndeng", email = "shawndeng1109@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["cookiecutter", "scaffold", "template", "uv", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "click>=8.1.8",
    "ruff>=0.9.6",
    "PyGithub>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]

[project.scripts]
repo-scaffold = "repo_scaffold.cli:cli"

[tool.coverage.run]
omit = [
    "repo_scaffold/templates/*",
]

[tool.coverage.report]
omit = [
    "repo_scaffold/templates/*",
]

[tool.hatch.build.targets.wheel]
packages = ["repo_scaffold"]
artifacts = ["repo_scaffold/templates/**"]

[tool.hatch.build.targets.sdist]
include = [
    "repo_scaffold/**",
    "tests/**",
    "README.md",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
