[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = "MIT"
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}},<{{cookiecutter.max_python_version}}.99"
dependencies = [
{%- if cookiecutter.include_cli == 'yes' %}
    "click>=8.1.8",
{%- endif %}
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
Documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_slug}}"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]
{%- if cookiecutter.use_github_actions == 'yes' %}
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]
{%- endif %}

{% if cookiecutter.include_cli == 'yes' -%}
[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:cli"
{%- endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
